ag_pathanalysis/ocaml/grammar.output
   0  $accept : %entry% $end

   1  program : stmtlist EOF

   2  stmtlist : revstmtlist

   3  revstmtlist : revstmtlist stmt
   4              |

   5  stmt : JMP expr attrs semi
   6       | CJMP expr COMMA expr COMMA expr attrs semi
   7       | SPECIAL STRING attrs semi
   8       | SPECIAL du STRING attrs semi
   9       | lval ASSIGN expr attrs semi
  10       | lval EQUAL expr attrs semi
  11       | HALT expr attrs semi
  12       | ASSERT expr attrs semi
  13       | ASSUME expr attrs semi
  14       | LABEL ID attrs
  15       | ADDR INT attrs
  16       | COMMENT attrs

  17  plusminusint : INT
  18               | MINUS INT

  19  taint : plusminusint

  20  usage : ID

  21  context : STRING EQUAL INT COMMA taint COMMA typ COMMA usage

  22  attrs :
  23        | attr attrs

  24  attr : AT ID STRING
  25       | AT ID STRING STRING
  26       | AT ID context

  27  du : DEFS lvals USES lvals
  28     | DEFS lvals
  29     | USES lvals

  30  nonemptylvals : lval COMMA nonemptylvals
  31                | lval

  32  lvals : nonemptylvals
  33        |

  34  lval : ID opttyp

  35  opttyp :
  36         | COLON typ

  37  typ : styp
  38      | styp QUESTION styp
  39      | styp EXCLAMATION styp

  40  styp : ID

  41  letstart : LET ID COLON typ ASSIGN expr

  42  expr : LPAREN expr RPAREN
  43       | expr PLUS expr
  44       | expr MINUS expr
  45       | expr TIMES expr
  46       | expr DIVIDE expr
  47       | expr SDIVIDE expr
  48       | expr MOD expr
  49       | expr SMOD expr
  50       | expr LSHIFT expr
  51       | expr RSHIFT expr
  52       | expr ARSHIFT expr
  53       | expr AND expr
  54       | expr OR expr
  55       | expr XOR expr
  56       | expr EQUALEQUAL expr
  57       | expr NEQ expr
  58       | expr LT expr
  59       | expr LE expr
  60       | expr SLT expr
  61       | expr SLE expr
  62       | expr GT expr
  63       | expr GE expr
  64       | expr SGT expr
  65       | expr SGE expr
  66       | NOT expr
  67       | MINUS expr
  68       | UNKNOWN STRING COLON typ
  69       | STRING
  70       | lval
  71       | IF expr THEN expr ELSE expr
  72       | letstart IN expr
  73       | EXTRACT COLON INT COLON INT COLON LSQUARE expr RSQUARE
  74       | CONCAT COLON LSQUARE expr RSQUARE LSQUARE expr RSQUARE
  75       | ID COLON typ LPAREN expr RPAREN
  76       | TRUE
  77       | FALSE
  78       | INT COLON typ
  79       | expr WITH LSQUARE expr COMMA endian RSQUARE COLON typ assign expr
  80       | expr LSQUARE expr COMMA endian RSQUARE COLON typ

  81  endian : EBIG
  82         | ELITTLE
  83         | expr

  84  semi : SEMI
  85       |

  86  assign : ASSIGN
  87         | EQUAL

  88  %entry% : '\001' program
  89          | '\002' expr

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . program  (88)
	revstmtlist : .  (4)

	.  reduce 4

	program  goto 4
	stmtlist  goto 5
	revstmtlist  goto 6


state 2
	%entry% : '\002' . expr  (89)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 20
	lval  goto 21
	letstart  goto 22


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	%entry% : '\001' program .  (88)

	.  reduce 88


state 5
	program : stmtlist . EOF  (1)

	EOF  shift 23
	.  error


state 6
	stmtlist : revstmtlist .  (2)
	revstmtlist : revstmtlist . stmt  (3)

	ID  shift 24
	COMMENT  shift 25
	CJMP  shift 26
	JMP  shift 27
	LABEL  shift 28
	ADDR  shift 29
	ASSERT  shift 30
	ASSUME  shift 31
	HALT  shift 32
	SPECIAL  shift 33
	EOF  reduce 2

	stmt  goto 34
	lval  goto 35


state 7
	lval : ID . opttyp  (34)
	expr : ID . COLON typ LPAREN expr RPAREN  (75)
	opttyp : .  (35)

	COLON  shift 36
	$end  reduce 35
	ID  reduce 35
	COMMENT  reduce 35
	RPAREN  reduce 35
	LSQUARE  reduce 35
	RSQUARE  reduce 35
	COMMA  reduce 35
	SEMI  reduce 35
	EOF  reduce 35
	CJMP  reduce 35
	JMP  reduce 35
	LABEL  reduce 35
	ADDR  reduce 35
	ASSERT  reduce 35
	ASSUME  reduce 35
	HALT  reduce 35
	SPECIAL  reduce 35
	IN  reduce 35
	WITH  reduce 35
	THEN  reduce 35
	ELSE  reduce 35
	PLUS  reduce 35
	MINUS  reduce 35
	DIVIDE  reduce 35
	MOD  reduce 35
	SMOD  reduce 35
	TIMES  reduce 35
	SDIVIDE  reduce 35
	LSHIFT  reduce 35
	RSHIFT  reduce 35
	ARSHIFT  reduce 35
	XOR  reduce 35
	NEQ  reduce 35
	SLT  reduce 35
	SLE  reduce 35
	AND  reduce 35
	OR  reduce 35
	EQUALEQUAL  reduce 35
	LT  reduce 35
	LE  reduce 35
	GT  reduce 35
	GE  reduce 35
	SGT  reduce 35
	SGE  reduce 35
	AT  reduce 35

	opttyp  goto 37


state 8
	expr : INT . COLON typ  (78)

	COLON  shift 38
	.  error


state 9
	expr : STRING .  (69)

	.  reduce 69


state 10
	expr : LPAREN . expr RPAREN  (42)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 39
	lval  goto 21
	letstart  goto 22


state 11
	letstart : LET . ID COLON typ ASSIGN expr  (41)

	ID  shift 40
	.  error


state 12
	expr : UNKNOWN . STRING COLON typ  (68)

	STRING  shift 41
	.  error


state 13
	expr : TRUE .  (76)

	.  reduce 76


state 14
	expr : FALSE .  (77)

	.  reduce 77


state 15
	expr : IF . expr THEN expr ELSE expr  (71)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 42
	lval  goto 21
	letstart  goto 22


state 16
	expr : MINUS . expr  (67)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 43
	lval  goto 21
	letstart  goto 22


state 17
	expr : CONCAT . COLON LSQUARE expr RSQUARE LSQUARE expr RSQUARE  (74)

	COLON  shift 44
	.  error


state 18
	expr : EXTRACT . COLON INT COLON INT COLON LSQUARE expr RSQUARE  (73)

	COLON  shift 45
	.  error


state 19
	expr : NOT . expr  (66)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 46
	lval  goto 21
	letstart  goto 22


state 20
	expr : expr . PLUS expr  (43)
	expr : expr . MINUS expr  (44)
	expr : expr . TIMES expr  (45)
	expr : expr . DIVIDE expr  (46)
	expr : expr . SDIVIDE expr  (47)
	expr : expr . MOD expr  (48)
	expr : expr . SMOD expr  (49)
	expr : expr . LSHIFT expr  (50)
	expr : expr . RSHIFT expr  (51)
	expr : expr . ARSHIFT expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)
	expr : expr . XOR expr  (55)
	expr : expr . EQUALEQUAL expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . LT expr  (58)
	expr : expr . LE expr  (59)
	expr : expr . SLT expr  (60)
	expr : expr . SLE expr  (61)
	expr : expr . GT expr  (62)
	expr : expr . GE expr  (63)
	expr : expr . SGT expr  (64)
	expr : expr . SGE expr  (65)
	expr : expr . WITH LSQUARE expr COMMA endian RSQUARE COLON typ assign expr  (79)
	expr : expr . LSQUARE expr COMMA endian RSQUARE COLON typ  (80)
	%entry% : '\002' expr .  (89)

	LSQUARE  shift 47
	WITH  shift 48
	PLUS  shift 49
	MINUS  shift 50
	DIVIDE  shift 51
	MOD  shift 52
	SMOD  shift 53
	TIMES  shift 54
	SDIVIDE  shift 55
	LSHIFT  shift 56
	RSHIFT  shift 57
	ARSHIFT  shift 58
	XOR  shift 59
	NEQ  shift 60
	SLT  shift 61
	SLE  shift 62
	AND  shift 63
	OR  shift 64
	EQUALEQUAL  shift 65
	LT  shift 66
	LE  shift 67
	GT  shift 68
	GE  shift 69
	SGT  shift 70
	SGE  shift 71
	$end  reduce 89


state 21
	expr : lval .  (70)

	.  reduce 70


state 22
	expr : letstart . IN expr  (72)

	IN  shift 72
	.  error


state 23
	program : stmtlist EOF .  (1)

	.  reduce 1


state 24
	lval : ID . opttyp  (34)
	opttyp : .  (35)

	COLON  shift 73
	STRING  reduce 35
	COMMA  reduce 35
	USES  reduce 35
	EQUAL  reduce 35
	ASSIGN  reduce 35

	opttyp  goto 37


state 25
	stmt : COMMENT . attrs  (16)
	attrs : .  (22)

	AT  shift 74
	ID  reduce 22
	COMMENT  reduce 22
	EOF  reduce 22
	CJMP  reduce 22
	JMP  reduce 22
	LABEL  reduce 22
	ADDR  reduce 22
	ASSERT  reduce 22
	ASSUME  reduce 22
	HALT  reduce 22
	SPECIAL  reduce 22

	attrs  goto 75
	attr  goto 76


state 26
	stmt : CJMP . expr COMMA expr COMMA expr attrs semi  (6)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 77
	lval  goto 21
	letstart  goto 22


state 27
	stmt : JMP . expr attrs semi  (5)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 78
	lval  goto 21
	letstart  goto 22


state 28
	stmt : LABEL . ID attrs  (14)

	ID  shift 79
	.  error


state 29
	stmt : ADDR . INT attrs  (15)

	INT  shift 80
	.  error


state 30
	stmt : ASSERT . expr attrs semi  (12)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 81
	lval  goto 21
	letstart  goto 22


state 31
	stmt : ASSUME . expr attrs semi  (13)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 82
	lval  goto 21
	letstart  goto 22


state 32
	stmt : HALT . expr attrs semi  (11)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 83
	lval  goto 21
	letstart  goto 22


state 33
	stmt : SPECIAL . STRING attrs semi  (7)
	stmt : SPECIAL . du STRING attrs semi  (8)

	STRING  shift 84
	DEFS  shift 85
	USES  shift 86
	.  error

	du  goto 87


state 34
	revstmtlist : revstmtlist stmt .  (3)

	.  reduce 3


state 35
	stmt : lval . ASSIGN expr attrs semi  (9)
	stmt : lval . EQUAL expr attrs semi  (10)

	EQUAL  shift 88
	ASSIGN  shift 89
	.  error


state 36
	opttyp : COLON . typ  (36)
	expr : ID COLON . typ LPAREN expr RPAREN  (75)

	ID  shift 90
	.  error

	typ  goto 91
	styp  goto 92


state 37
	lval : ID opttyp .  (34)

	.  reduce 34


state 38
	expr : INT COLON . typ  (78)

	ID  shift 90
	.  error

	typ  goto 93
	styp  goto 92


state 39
	expr : LPAREN expr . RPAREN  (42)
	expr : expr . PLUS expr  (43)
	expr : expr . MINUS expr  (44)
	expr : expr . TIMES expr  (45)
	expr : expr . DIVIDE expr  (46)
	expr : expr . SDIVIDE expr  (47)
	expr : expr . MOD expr  (48)
	expr : expr . SMOD expr  (49)
	expr : expr . LSHIFT expr  (50)
	expr : expr . RSHIFT expr  (51)
	expr : expr . ARSHIFT expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)
	expr : expr . XOR expr  (55)
	expr : expr . EQUALEQUAL expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . LT expr  (58)
	expr : expr . LE expr  (59)
	expr : expr . SLT expr  (60)
	expr : expr . SLE expr  (61)
	expr : expr . GT expr  (62)
	expr : expr . GE expr  (63)
	expr : expr . SGT expr  (64)
	expr : expr . SGE expr  (65)
	expr : expr . WITH LSQUARE expr COMMA endian RSQUARE COLON typ assign expr  (79)
	expr : expr . LSQUARE expr COMMA endian RSQUARE COLON typ  (80)

	RPAREN  shift 94
	LSQUARE  shift 47
	WITH  shift 48
	PLUS  shift 49
	MINUS  shift 50
	DIVIDE  shift 51
	MOD  shift 52
	SMOD  shift 53
	TIMES  shift 54
	SDIVIDE  shift 55
	LSHIFT  shift 56
	RSHIFT  shift 57
	ARSHIFT  shift 58
	XOR  shift 59
	NEQ  shift 60
	SLT  shift 61
	SLE  shift 62
	AND  shift 63
	OR  shift 64
	EQUALEQUAL  shift 65
	LT  shift 66
	LE  shift 67
	GT  shift 68
	GE  shift 69
	SGT  shift 70
	SGE  shift 71
	.  error


state 40
	letstart : LET ID . COLON typ ASSIGN expr  (41)

	COLON  shift 95
	.  error


state 41
	expr : UNKNOWN STRING . COLON typ  (68)

	COLON  shift 96
	.  error


state 42
	expr : expr . PLUS expr  (43)
	expr : expr . MINUS expr  (44)
	expr : expr . TIMES expr  (45)
	expr : expr . DIVIDE expr  (46)
	expr : expr . SDIVIDE expr  (47)
	expr : expr . MOD expr  (48)
	expr : expr . SMOD expr  (49)
	expr : expr . LSHIFT expr  (50)
	expr : expr . RSHIFT expr  (51)
	expr : expr . ARSHIFT expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)
	expr : expr . XOR expr  (55)
	expr : expr . EQUALEQUAL expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . LT expr  (58)
	expr : expr . LE expr  (59)
	expr : expr . SLT expr  (60)
	expr : expr . SLE expr  (61)
	expr : expr . GT expr  (62)
	expr : expr . GE expr  (63)
	expr : expr . SGT expr  (64)
	expr : expr . SGE expr  (65)
	expr : IF expr . THEN expr ELSE expr  (71)
	expr : expr . WITH LSQUARE expr COMMA endian RSQUARE COLON typ assign expr  (79)
	expr : expr . LSQUARE expr COMMA endian RSQUARE COLON typ  (80)

	LSQUARE  shift 47
	WITH  shift 48
	THEN  shift 97
	PLUS  shift 49
	MINUS  shift 50
	DIVIDE  shift 51
	MOD  shift 52
	SMOD  shift 53
	TIMES  shift 54
	SDIVIDE  shift 55
	LSHIFT  shift 56
	RSHIFT  shift 57
	ARSHIFT  shift 58
	XOR  shift 59
	NEQ  shift 60
	SLT  shift 61
	SLE  shift 62
	AND  shift 63
	OR  shift 64
	EQUALEQUAL  shift 65
	LT  shift 66
	LE  shift 67
	GT  shift 68
	GE  shift 69
	SGT  shift 70
	SGE  shift 71
	.  error


state 43
	expr : expr . PLUS expr  (43)
	expr : expr . MINUS expr  (44)
	expr : expr . TIMES expr  (45)
	expr : expr . DIVIDE expr  (46)
	expr : expr . SDIVIDE expr  (47)
	expr : expr . MOD expr  (48)
	expr : expr . SMOD expr  (49)
	expr : expr . LSHIFT expr  (50)
	expr : expr . RSHIFT expr  (51)
	expr : expr . ARSHIFT expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)
	expr : expr . XOR expr  (55)
	expr : expr . EQUALEQUAL expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . LT expr  (58)
	expr : expr . LE expr  (59)
	expr : expr . SLT expr  (60)
	expr : expr . SLE expr  (61)
	expr : expr . GT expr  (62)
	expr : expr . GE expr  (63)
	expr : expr . SGT expr  (64)
	expr : expr . SGE expr  (65)
	expr : MINUS expr .  (67)
	expr : expr . WITH LSQUARE expr COMMA endian RSQUARE COLON typ assign expr  (79)
	expr : expr . LSQUARE expr COMMA endian RSQUARE COLON typ  (80)

	LSQUARE  shift 47
	$end  reduce 67
	ID  reduce 67
	COMMENT  reduce 67
	RPAREN  reduce 67
	RSQUARE  reduce 67
	COMMA  reduce 67
	SEMI  reduce 67
	EOF  reduce 67
	CJMP  reduce 67
	JMP  reduce 67
	LABEL  reduce 67
	ADDR  reduce 67
	ASSERT  reduce 67
	ASSUME  reduce 67
	HALT  reduce 67
	SPECIAL  reduce 67
	IN  reduce 67
	WITH  reduce 67
	THEN  reduce 67
	ELSE  reduce 67
	PLUS  reduce 67
	MINUS  reduce 67
	DIVIDE  reduce 67
	MOD  reduce 67
	SMOD  reduce 67
	TIMES  reduce 67
	SDIVIDE  reduce 67
	LSHIFT  reduce 67
	RSHIFT  reduce 67
	ARSHIFT  reduce 67
	XOR  reduce 67
	NEQ  reduce 67
	SLT  reduce 67
	SLE  reduce 67
	AND  reduce 67
	OR  reduce 67
	EQUALEQUAL  reduce 67
	LT  reduce 67
	LE  reduce 67
	GT  reduce 67
	GE  reduce 67
	SGT  reduce 67
	SGE  reduce 67
	AT  reduce 67


state 44
	expr : CONCAT COLON . LSQUARE expr RSQUARE LSQUARE expr RSQUARE  (74)

	LSQUARE  shift 98
	.  error


state 45
	expr : EXTRACT COLON . INT COLON INT COLON LSQUARE expr RSQUARE  (73)

	INT  shift 99
	.  error


state 46
	expr : expr . PLUS expr  (43)
	expr : expr . MINUS expr  (44)
	expr : expr . TIMES expr  (45)
	expr : expr . DIVIDE expr  (46)
	expr : expr . SDIVIDE expr  (47)
	expr : expr . MOD expr  (48)
	expr : expr . SMOD expr  (49)
	expr : expr . LSHIFT expr  (50)
	expr : expr . RSHIFT expr  (51)
	expr : expr . ARSHIFT expr  (52)
	expr : expr . AND expr  (53)
	expr : expr . OR expr  (54)
	expr : expr . XOR expr  (55)
	expr : expr . EQUALEQUAL expr  (56)
	expr : expr . NEQ expr  (57)
	expr : expr . LT expr  (58)
	expr : expr . LE expr  (59)
	expr : expr . SLT expr  (60)
	expr : expr . SLE expr  (61)
	expr : expr . GT expr  (62)
	expr : expr . GE expr  (63)
	expr : expr . SGT expr  (64)
	expr : expr . SGE expr  (65)
	expr : NOT expr .  (66)
	expr : expr . WITH LSQUARE expr COMMA endian RSQUARE COLON typ assign expr  (79)
	expr : expr . LSQUARE expr COMMA endian RSQUARE COLON typ  (80)

	LSQUARE  shift 47
	$end  reduce 66
	ID  reduce 66
	COMMENT  reduce 66
	RPAREN  reduce 66
	RSQUARE  reduce 66
	COMMA  reduce 66
	SEMI  reduce 66
	EOF  reduce 66
	CJMP  reduce 66
	JMP  reduce 66
	LABEL  reduce 66
	ADDR  reduce 66
	ASSERT  reduce 66
	ASSUME  reduce 66
	HALT  reduce 66
	SPECIAL  reduce 66
	IN  reduce 66
	WITH  reduce 66
	THEN  reduce 66
	ELSE  reduce 66
	PLUS  reduce 66
	MINUS  reduce 66
	DIVIDE  reduce 66
	MOD  reduce 66
	SMOD  reduce 66
	TIMES  reduce 66
	SDIVIDE  reduce 66
	LSHIFT  reduce 66
	RSHIFT  reduce 66
	ARSHIFT  reduce 66
	XOR  reduce 66
	NEQ  reduce 66
	SLT  reduce 66
	SLE  reduce 66
	AND  reduce 66
	OR  reduce 66
	EQUALEQUAL  reduce 66
	LT  reduce 66
	LE  reduce 66
	GT  reduce 66
	GE  reduce 66
	SGT  reduce 66
	SGE  reduce 66
	AT  reduce 66


state 47
	expr : expr LSQUARE . expr COMMA endian RSQUARE COLON typ  (80)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 100
	lval  goto 21
	letstart  goto 22


state 48
	expr : expr WITH . LSQUARE expr COMMA endian RSQUARE COLON typ assign expr  (79)

	LSQUARE  shift 101
	.  error


state 49
	expr : expr PLUS . expr  (43)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 102
	lval  goto 21
	letstart  goto 22


state 50
	expr : expr MINUS . expr  (44)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 103
	lval  goto 21
	letstart  goto 22


state 51
	expr : expr DIVIDE . expr  (46)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 104
	lval  goto 21
	letstart  goto 22


state 52
	expr : expr MOD . expr  (48)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 105
	lval  goto 21
	letstart  goto 22


state 53
	expr : expr SMOD . expr  (49)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 106
	lval  goto 21
	letstart  goto 22


state 54
	expr : expr TIMES . expr  (45)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 107
	lval  goto 21
	letstart  goto 22


state 55
	expr : expr SDIVIDE . expr  (47)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 108
	lval  goto 21
	letstart  goto 22


state 56
	expr : expr LSHIFT . expr  (50)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 109
	lval  goto 21
	letstart  goto 22


state 57
	expr : expr RSHIFT . expr  (51)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 110
	lval  goto 21
	letstart  goto 22


state 58
	expr : expr ARSHIFT . expr  (52)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 111
	lval  goto 21
	letstart  goto 22


state 59
	expr : expr XOR . expr  (55)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 112
	lval  goto 21
	letstart  goto 22


state 60
	expr : expr NEQ . expr  (57)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 113
	lval  goto 21
	letstart  goto 22


state 61
	expr : expr SLT . expr  (60)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 114
	lval  goto 21
	letstart  goto 22


state 62
	expr : expr SLE . expr  (61)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 115
	lval  goto 21
	letstart  goto 22


state 63
	expr : expr AND . expr  (53)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 116
	lval  goto 21
	letstart  goto 22


state 64
	expr : expr OR . expr  (54)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 117
	lval  goto 21
	letstart  goto 22


state 65
	expr : expr EQUALEQUAL . expr  (56)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 118
	lval  goto 21
	letstart  goto 22


state 66
	expr : expr LT . expr  (58)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 119
	lval  goto 21
	letstart  goto 22


state 67
	expr : expr LE . expr  (59)

	ID  shift 7
	INT  shift 8
	STRING  shift 9
	LPAREN  shift 10
	LET  shift 11
	UNKNOWN  shift 12
	TRUE  shift 13
	FALSE  shift 14
	IF  shift 15
	MINUS  shift 16
	CONCAT  shift 17
	EXTRACT  shift 18
	NOT  shift 19
	.  error

	expr  goto 120
	lval  goto 21
	letstart  goto 22


state 68
	expr : expr GT . expr  (62)
